Move from javafx to swing